--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,15 @@ body {
     background-size: auto;
     background-color: black;
 }
+
+#question-card {
+    display: none;
+    margin: 100px 0px 0px 250px;
+}
+
+#question-options {
+    display: none;
+    color: white;
+    background-color: tomato;
+}
+
