Evolutionary changes to program files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,9 @@ body {
     margin: 100px 0px 0px 250px;
 }
 
-#question-options {
+/* #question-options {
     display: none;
     color: white;
     background-color: tomato;
-}
+} */
 
